--- a/public/login.html
+++ b/public/login.html
@@ -7,40 +7,23 @@
     <title>Document</title>
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth-compat.js"></script>
+    <link rel="stylesheet" href="login.css">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
 </head>
-<style>
-    input {
-        width: 330px;
-        height: 40px;
-        margin-top: 20px;
-        border-radius: 10px;
-        margin-left: 35px;
-    }
-
-    button {
-        width: 330px;
-        height: 40px;
-        margin-top: 20px;
-        border-radius: 10px;
-        margin-left: 35px;
-        color: white;
-        background-color: rgb(242, 79, 0);
-        border: none;
-    }
-</style>
 
 <body>
-    <div style="display: flex; align-items: center; margin-top: 60px;  ">
+    <div class="main-div">
+        <div class="img-div">
         <img src="image-removebg-preview.png" alt="">
-        <div style="width: 400px; height: 600px;background-color: white; margin-left: 150px;">
-            <h3 style="text-align: center; margin-top: 70px; font-weight: 800;">Login</h3>
-            <h3 style="text-align: center;  font-weight: 800;">Welcome back!</h3>
-            <input placeholder="Enter Your Email" type="email" name="" id="email">
+        </div>
+        <div class="second-div">
+            <h3 class="h3-signup" style="text-align: center; margin-top: 70px; font-weight: 800;">Login</h3>
+            <h3 class="h3-signup" style="text-align: center;  font-weight: 800;">Welcome back!</h3>
+            <input  placeholder="Enter Your Email" type="email" name="" id="email">
             <input placeholder="Enter Your Password" type="password" name="" id="password">
             <button onclick="check()">Login</button>
-            <p style="text-align: center;">Don't have an account? <a style="text-decoration: none;"
+            <p class="h3-signup" style="text-align: center;">Don't have an account? <a style="text-decoration: none;"
                     href="Signup.html">Signup</a></p>
         </div>
 
