--- a/public/login.html
+++ b/public/login.html
@@ -15,16 +15,20 @@
 <body>
     <div class="main-div">
         <div class="img-div">
-        <img src="image-removebg-preview.png" alt="">
+            <img src="image-removebg-preview.png" alt="">
         </div>
         <div class="second-div">
             <h3 class="h3-signup" style="text-align: center; margin-top: 70px; font-weight: 800;">Login</h3>
             <h3 class="h3-signup" style="text-align: center;  font-weight: 800;">Welcome back!</h3>
-            <input  placeholder="Enter Your Email" type="email" name="" id="email">
+            <input placeholder="Enter Your Email" type="email" name="" id="email">
             <input placeholder="Enter Your Password" type="password" name="" id="password">
-            <button onclick="check()">Login</button>
+            <button onclick="check()">Login
+                <div id="loading" style="display:none; margin-left: 10px;">Loading...</div>
+            </button>
             <p class="h3-signup" style="text-align: center;">Don't have an account? <a style="text-decoration: none;"
                     href="Signup.html">Signup</a></p>
+            <div id="message" style="text-align: center; margin-top: 20px;"></div>
+
         </div>
 
     </div>
@@ -33,33 +37,47 @@
 </html>
 <script>
     const firebaseConfig = {
-      apiKey: "AIzaSyD3NepjPiw4J6oK6PuShK1Smbxdy0LsOcM",
-      authDomain: "level2-project-8e0a8.firebaseapp.com",
-      projectId: "level2-project-8e0a8",
-      storageBucket: "level2-project-8e0a8.appspot.com",
-      messagingSenderId: "627012890577",
-      appId: "1:627012890577:web:04178a719788ae64f77af0"
+        apiKey: "AIzaSyD3NepjPiw4J6oK6PuShK1Smbxdy0LsOcM",
+        authDomain: "level2-project-8e0a8.firebaseapp.com",
+        projectId: "level2-project-8e0a8",
+        storageBucket: "level2-project-8e0a8.appspot.com",
+        messagingSenderId: "627012890577",
+        appId: "1:627012890577:web:04178a719788ae64f77af0"
     };
-  
+
     // Initialize Firebase
     const app = firebase.initializeApp(firebaseConfig);
     var provider = new firebase.auth.GoogleAuthProvider();
-  
-  </script>
+
+</script>
 <script>
     function check() {
-        firebase.auth().signInWithEmailAndPassword(email.value, password.value)
-            .then((userCredential) => {
-                // Signed in
-                var user = userCredential.user;
-                alert('login successful')
-                window.location.href = 'dashbd.html'
-                // ...
-            })
-            .catch((error) => {
-                var errorCode = error.code;
-                var errorMessage = error.message;
-                console.log(errorMessage);
-            });
-    }
+      if ( !email.value || !password.value) {
+    document.getElementById('message').innerHTML = '<span style="color: red;">All fields are required!</span>';
+    return;
+  }
+  // Show the loading indicator
+  document.getElementById('loading').style.display = 'inline';
+  document.getElementById('message').innerHTML = ''; // Clear previous messages
+
+  firebase.auth().signInWithEmailAndPassword(email.value, password.value)
+    .then((userCredential) => {
+      // Signed in
+      document.getElementById('message').innerHTML = '<span style="color: green;">Login Successful!</span>';
+      // Redirect after a short delay
+      setTimeout(() => {
+        window.location.href = 'dashbd.html'; // Replace with your dashboard or desired page
+      }, 2000); // 2-second delay
+    })
+    .catch((error) => {
+      var errorMessage = error.message;
+      document.getElementById('message').innerHTML = `<span style="color: red;">Error: ${errorMessage}</span>`;
+      console.log(errorMessage);
+    })
+    .finally(() => {
+      // Hide the loading indicator
+      document.getElementById('loading').style.display = 'none';
+    });
+}
+
 </script>
